bdr.BDR2.scala.error
Erreur de compilation :
BDR2:7: error: not found: value ==
    case instruction=="L"=>gauche();avance()
                    ^BDR2:8: error: not found: value ==
    case instruction=="I" =>retourne();avance()
                    ^BDR2:9: error: not found: value ==
    case instruction=="A"=>avance() 
                    ^BDR2:10: error: not found: value ==
    case instruction=="B"=>avance();avance()
                    ^BDR2:11: error: not found: value ==
    case instruction=="C"=>avance();avance();avance()
                    ^BDR2:12: error: not found: value ==
    case instruction=="D"=>avance();avance();avance();avance()
                    ^BDR2:13: error: not found: value ==
    case instruction=="E"=>avance();avance();avance();avance();avance()
                    ^BDR2:14: error: not found: value ==
    case instruction=="F"=>avance();avance();avance();avance();avance();avance()
                    ^BDR2:15: error: not found: value ==
    case instruction=="Z"=>recule() 
                    ^BDR2:16: error: not found: value ==
    case instruction=="Y"=>recule();recule()
                    ^BDR2:17: error: not found: value ==
    case instruction=="X"=>recule();recule();recule()
                    ^BDR2:18: error: not found: value ==
    case instruction=="W"=>recule();recule();recule();recule()
                    ^BDR2:19: error: not found: value ==
    case instruction=="V"=>recule();recule();recule();recule();recule()
                    ^BDR2:20: error: not found: value ==
    case instruction=="U"=>recule();recule();recule();recule();recule();recule()
                    ^